--- a/app/src/main/res/layout/activity_instagram_image_info.xml
+++ b/app/src/main/res/layout/activity_instagram_image_info.xml
@@ -1,57 +1,63 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="kg.android.instagram.instandroid.InstagramImageInfoActivity"
+    android:fillViewport="true"
     android:orientation="vertical"
     android:background="#171312d0">
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp">
+        android:layout_height="fill_parent">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/userImageView"
+                android:src="@drawable/ic_launcher" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_username"
+                android:id="@+id/loginTextView"
+                android:textStyle="bold"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="9dp" />
+        </LinearLayout>
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/userImageView"
-            android:src="@drawable/ic_launcher" />
+            android:layout_width="330dp"
+            android:layout_height="330dp"
+            android:id="@+id/photoView"
+            android:src="@drawable/default_img"
+            android:contentDescription="@string/action_settings"
+            android:layout_marginBottom="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/default_username"
-            android:id="@+id/loginTextView"
-            android:textStyle="bold"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="9dp" />
+            android:text="@string/default_caption"
+            android:id="@+id/captionTextView"
+            android:lines="3"
+            android:layout_marginBottom="6dp" />
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            android:id="@+id/commentsListView" />
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="330dp"
-        android:layout_height="330dp"
-        android:id="@+id/photoView"
-        android:src="@drawable/default_img"
-        android:contentDescription="@string/action_settings"
-        android:layout_marginBottom="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/default_caption"
-        android:id="@+id/captionTextView"
-        android:lines="3"
-        android:layout_marginBottom="6dp" />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/commentsListView" />
-
-</LinearLayout>
+</ScrollView>
