--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -13,6 +13,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
+        android:layout_marginLeft="5dp"
         android:layout_height="fill_parent">
 
         <TextView
@@ -20,6 +21,7 @@
             android:layout_height="wrap_content"
             android:text="@string/default_username"
             android:id="@+id/comentatorTextView"
+            android:layout_marginBottom="2dp"
             android:textStyle="bold" />
 
         <TextView
