--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -14,8 +14,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/avatarImageView"
-            android:src="@drawable/ic_launcher"
-            android:layout_marginLeft="15dp" />
+            android:src="@drawable/ic_launcher" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -47,7 +46,5 @@
             android:ellipsize="end"
             android:text="@string/default_caption"
             android:id="@+id/textView"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="4dp"
             android:layout_marginBottom="15dp" />
 </LinearLayout>
