Found new lib called fresco deleted picasso and circleimage libs and chaged with fresco

--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     style="@style/CardView.Light"
     android:layout_width="match_parent"
@@ -19,12 +20,15 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/profile_image"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_margin="6dp"
-                android:src="@drawable/ic_launcher" />
+                fresco:placeholderImage="@android:color/transparent"
+                fresco:roundAsCircle="true"
+                fresco:actualImageScaleType="focusCrop"
+                />
 
             <TextView
                 android:id="@+id/profile_name"
@@ -42,13 +46,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/ivFeedCenter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/img_feed_center_1" />
+                fresco:actualImageScaleType="focusCrop"
+                fresco:placeholderImage="@android:color/transparent"
+                />
 
         </FrameLayout>
 
